--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-12">
             <div class="top-nav__content">
-              <div class="top-nav__text"><a class="top-nav__link">Free Shipping! On all Purchases</a></div>
+              <div class="top-nav__text"><a href="/pages/free-shipping" class="top-nav__link">Free Shipping! On all Purchases</a></div>
               <div class="top-nav__nav">
                 <a href="tel:18776533877" class="top-nav__nav-item top-nav__nav-item_icon_phone">1-877-653-3877</a>
                 <a href="#" class="top-nav__nav-item top-nav__nav-item_icon_chat" onclick="LC_API.open_chat_window()">Live chat</a>                                   
