--- a/sections/product_detail_information.liquid
+++ b/sections/product_detail_information.liquid
@@ -280,6 +280,8 @@
 
                                     </div>
                         
+                      
+                      <div class="hulkapps-volumes"></div>
                                     <div class="product-info__pay-text">
                                        <b>Pay in Installments</b>: &nbsp;
                                        <p class="affirm-as-low-as" id="affirm-container" data-page-type="product" data-amount="{{variant.price}}"></p>
