--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,7 +5,8 @@
 
     <meta charset="utf-8">
     <!-- <base href="/"> -->
-
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+{% include 'hulkcode_common' %}
   	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -113,7 +114,7 @@
  <input type="hidden" id="656565115116111114101" data-customer-id="{{ customer.id }}" data-customer-email="{{ customer.email }}" data-customer-name="{{ customer.first_name }} {{ customer.last_name }}"/>
  
  {% include 'scroll-to-the-top' %}
- {% comment %}This is for Volume Discount App by hulkapps{% endcomment %}{% include 'hulkcode_common' %}{% include 'spurit_dmr_theme_snippet' %}
+ {% include 'spurit_dmr_theme_snippet' %}
 </body>
 </html>
 {% include 'livechat_chat_window' %}
