--- a/snippets/hero_content.liquid
+++ b/snippets/hero_content.liquid
@@ -1,8 +1,10 @@
 
 <!--<h5>{{section.settings.hero_title}}</h5>
 <h1>{{section.settings.hero_subtitle}}</h1>-->
-<a href=/collections/fur><div class="main-banner__content-text">{{section.settings.hero_description}}</div></a>
+
+<a href="/collections/fur"><div class="main-banner__content-text">{{section.settings.hero_description}}</div>
 
 {%- if section.settings.hero_show_button == true -%}
     <a href="{{section.settings.hero_link_button}}" class="main-banner__button-preview button-preview">{{section.settings.hero_text_button}} </a>
 {%- endif -%}			 
+</a>
