--- a/snippets/product_detail.liquid
+++ b/snippets/product_detail.liquid
@@ -32,7 +32,27 @@
                     </a> 
                 </div>
             </div>
-            <div class="product__price">{{product.price | money}}</div>            
+
+            {%- assign variant= product.selected_or_first_available_variant-%}
+            {%- assign compare_at_price = variant.compare_at_price | times: 1 -%}
+            {%- assign price = variant.price -%}
+            
+            {%- if compare_at_price > 0 and compare_at_price != price -%}
+                <div class="product-info__original__price">                                                                
+                    Original Price: <span>{{compare_at_price | money}}</span> 
+                </div>
+
+                {%- include "was-price" -%}
+
+                <div class="product-info__now__price">                                                                                                    
+                    Now: <span id="now_price_value">{{price | money}}</span> 
+                </div>
+
+            {%- else -%}
+                <div class="product__price">{{product.price | money}}</div>            
+            {%- endif -%}
+
+            
             <div class="product__rate">{%- include "rate_reviews" -%}</div>
             <div class="product__swatches product__swatches__mobile"> {% include 'swatches_product' %}</div>
         </div>
