--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -1,14 +1,24 @@
 <div class="container-fluid">
   <div id="login-popup" class="login-popup popup-window" style="margin-bottom: 10px">
-    <div class="login-popup__left-part"> {%- if form.errors -%}
-      <div class="form-message form-message--error"> {{ form.errors | default_errors }} </div> {%- endif -%} {% form 'customer_login', class: 'account-form', action: "https://vital-forms-api.ellipsis.cloud/api/form/vfob/a6f8b253-c6be-4252-aa58-a542241aa837$5becc2b6d5844a00b998f761", data-vfib: "0" %}
-      <div class="account-form__title">Login</div>
-      <div class="account-form__body">
-        <label for="email">Email Address</label>
-        <input class="input-text account-form__input-text" type="email" value="" name="customer[email]" size="30" required />
-        <label for="password">Password</label>
-        <input class="input-text account-form__input-text" type="password" value="" name="customer[password]" size="30" required />
-        <input type="submit" class="form-button" value="{{ 'customer.login.sign_in' | t }}"> </div> {% endform %} {% form 'recover_customer_password', class: 'account-form' %}
+    <div class="login-popup__left-part"> 
+      {% form 'customer_login', class: 'account-form' %}
+
+        {%- if form.errors -%}
+          <div class="alert alert-danger"> 
+             {{ form.errors | default_errors }} 
+          </div> 
+        {%- endif -%} 
+
+        <div class="account-form__title">Login</div>
+        <div class="account-form__body">
+          <label for="email">Email Address</label>
+          <input class="input-text account-form__input-text" type="email" value="" name="customer[email]" size="30" required />
+          <label for="password">Password</label>
+          <input class="input-text account-form__input-text" type="password" value="" name="customer[password]" size="30" required />
+          <input type="submit" class="form-button" value="{{ 'customer.login.sign_in' | t }}"> 
+        </div> 
+      {% endform %} 
+      {% form 'recover_customer_password', class: 'account-form' %}
       <div class="account-form__title">Reset Password</div>
       <div class="account-form__subtitle"> We will send you an email to reset your password.</div>
       <div class="account-form__body">
