I fixed the options boxes

--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -20,7 +20,7 @@
 		min-width: 500px
 	
 	.product-card__slider-for-container
-		/*flex-shrink: 1*/
+		/*flex-shrink: 1
 		/*max-width: 100%*/
 		flex: 0 0 37.5%
 		margin-left: 0
@@ -894,15 +894,16 @@
 		display: -ms-flex
 		display: -o-flex
 		display: flex
-		justify-content: center
+		justify-content: space-between
+		flex-wrap: wrap
 		margin-bottom: 25px
 
 	.product-info__size-box
 		border-width: 2px
-		font-size: 14px
+		font-size: 14px		
 		height: auto
-		margin: 5px 3px
-		padding: 10px 20px				
+		padding: 10px 20px
+		margin: 5px 3px		
 		width: auto
 
 	.product-info__share
@@ -927,15 +928,14 @@
 	.product__price
 		font-size: 13px
 
-	.product-info__size-link		
+	.product-info__size-link
 		display: -webkit-inline-flex
 		display: -moz-inline-flex
 		display: -ms-inline-flex
 		display: -o-inline-flex
 		display: inline-flex
-		align-items: center		
-		float: right
-		padding: 25px
+		align-items: center
+		padding: 0 25px		
 
 	.product-info__pay-text
 		font-size: 12px
