I added some changes on the affirm section

--- a/sections/product_detail_information.liquid
+++ b/sections/product_detail_information.liquid
@@ -1,5 +1,5 @@
 			<div class="product-card__content">
-				<div class="row">
+				<div class="row product-card__content_row">
 
         {%- if product.images.size > 0 -%}
           <div class="product-card__slider-nav-container d-none d-lg-flex">
@@ -283,7 +283,7 @@
                       
                       <div class="hulkapps-volumes"></div>
                                     <div class="product-info__pay-text">
-                                       <b>Pay in Installments</b>: &nbsp;
+                                       <b>Pay in Installments</b>:&nbsp;
                                        <p class="affirm-as-low-as" id="affirm-container" data-page-type="product" data-amount="{{variant.price}}"></p>
                                     </div>
 
