--- a/sections/subscribe.liquid
+++ b/sections/subscribe.liquid
@@ -1,4 +1,4 @@
-	<section class="subscribe">
+	<section class="subscribe" style="clear:both">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-12 col-lg-6 subscribe__left">
