I added the link on the product name in the page reviews

--- a/snippets/nav-sidebar.liquid
+++ b/snippets/nav-sidebar.liquid
@@ -16,7 +16,7 @@
 							<a href="/pages/sustainability" class="nav-sidebar__link">Sustainability</a>
 						</li>
 						<li class="nav-sidebar__item">
-							<a href="/pages/size-chart" class="nav-sidebar__link">Size chart</a>
+							<a href="/pages/size-chart" class="nav-sidebar__link {% if option_selected == 'size' %}nav-sidebar__link_active {% endif %}">Size chart</a>
 						</li>
 						<li class="nav-sidebar__item">
 							<a href="free-shipping" class="nav-sidebar__link">Free shipping</a>
