I added a custom class name on the recently viewed products code

--- a/snippets/zendapps_recent_products.liquid
+++ b/snippets/zendapps_recent_products.liquid
@@ -93,7 +93,7 @@
         color: #000000 !important;
     }
 </style>
-<div id="rv__recent_products" class="rv__grid za_grid" style="display:none;margin-top: 10px;margin-bottom: 10px;padding: 0px;background-color: #ffffff;min-height: 400px;">
+<div id="rv__recent_products" class="rv__grid za_grid recently_viewed_products" style="display:none;margin-top: 10px;margin-bottom: 10px;padding: 0px;background-color: #ffffff;min-height: 400px;">
     <div class="rv__row" id="za_main_row">
         <div class="rv__twelve" id="za_m_h1">
             <h1 id="za_title" class="rv__center" style="padding-top: 25px;font-size: 35px">Recently Viewed Products</h1>
