I changed the name of the images. they were wrong

--- a/sections/sizes_content.liquid
+++ b/sections/sizes_content.liquid
@@ -11,10 +11,10 @@
   </div>
 
   <div class="tab-pane fade" id="nav-men" role="tabpanel" aria-labelledby="nav-men-tab">
-     <img src="{{section.settings.men_image | img_url: 'master' }}" alt="Men's Sizes" />     
+     <img src="{{section.settings.men_size | img_url: 'master' }}" alt="Men's Sizes" />     
   </div>
   <div class="tab-pane fade" id="nav-glove" role="tabpanel" aria-labelledby="nav-glove-tab">
-     <img src="{{section.settings.glove_image | img_url: 'master' }}" alt="Glove's Sizes" />          
+     <img src="{{section.settings.glove_size | img_url: 'master' }}" alt="Glove's Sizes" />          
   </div>
 </div>
 
