I removed a submit on the search option to allow show autocomplete suggesttions

--- a/assets/common.js.liquid
+++ b/assets/common.js.liquid
@@ -234,10 +234,10 @@ $(function() {
 		e.preventDefault();
 		let query = $('.mobile-nav__input').val();
 		if (query.length != 0) {
-			$('.mobile-nav__search-form').submit();
+			//$('.mobile-nav__search-form').submit();
 		} else {
-			$('.mobile-nav__input').toggleClass('mobile-nav__input_visible').focus();
-			$('.logo').toggle();
+			//$('.mobile-nav__input').toggleClass('mobile-nav__input_visible').focus();
+			//$('.logo').toggle();
 		}
 		
 	});
