I added a css code because there is an app with float:left

--- a/web-flair/app/sass/blocks/subscribe/_subscribe.sass
+++ b/web-flair/app/sass/blocks/subscribe/_subscribe.sass
@@ -1,6 +1,7 @@
 .subscribe
 	border-top: 1px solid $gray
 	border-bottom: 1px solid $gray
+	clear: both
 
 .subscribe__left
 	border-right: 1px solid $gray
