I put the search option as first

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -62,9 +62,9 @@
               </div>
 
               <div class="main-nav__mobile-nav mobile-nav">
-                <form class="mobile-nav__search-form">
+                <!--<form class="mobile-nav__search-form">
                   <input class="mobile-nav__input main-nav__search-form-input" placeholder="Search...">
-                </form>
+                </form>-->
                 <!--<a href="#" class="mobile-nav__item mobile-nav__item-search"><img src="{{ 'search-dark.png' | asset_url }}" alt="search" ></a>-->
 
                 {% if customer %}
