--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -54,6 +54,27 @@
     {{ "customer_area.js"  | shopify_asset_url | script_tag }}
 {% include 'sca-quick-view-init' %}
  <script src="//staticxx.s3.amazonaws.com/aio_stats_lib_v1.min.js?v=1.0"></script>
+
+  <script>
+  window['_fs_debug'] = false;
+  window['_fs_host'] = 'fullstory.com';
+  window['_fs_org'] = '7QNZH';
+  window['_fs_namespace'] = 'FS';
+  (function(m,n,e,t,l,o,g,y){
+      if (e in m) {if(m.console && m.console.log) { m.console.log('FullStory namespace conflict. Please set window["_fs_namespace"].');} return;}
+      g=m[e]=function(a,b,s){g.q?g.q.push([a,b,s]):g._api(a,b,s);};g.q=[];
+      o=n.createElement(t);o.async=1;o.src='https://'+_fs_host+'/s/fs.js';
+      y=n.getElementsByTagName(t)[0];y.parentNode.insertBefore(o,y);
+      g.identify=function(i,v,s){g(l,{uid:i},s);if(v)g(l,v,s)};g.setUserVars=function(v,s){g(l,v,s)};g.event=function(i,v,s){g('event',{n:i,p:v},s)};
+      g.shutdown=function(){g("rec",!1)};g.restart=function(){g("rec",!0)};
+      g.consent=function(a){g("consent",!arguments.length||a)};
+      g.identifyAccount=function(i,v){o='account';v=v||{};v.acctId=i;g(o,v)};
+      g.clearUserCookie=function(){};
+  })(window,document,window['_fs_namespace'],'script','user');
+  </script>
+
+  <script src="//scripts.iconnode.com/54769.js"></script>
+
 </head>
 
 <body class="body template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}">  
@@ -84,14 +105,25 @@
 
   {%- if template.name == 'collection' -%}
      {{ 'collections.js' | asset_url | script_tag }}
-   
+     {{ 'readmore.js' | asset_url | script_tag }}
+
      <script>
          $(document).ready(function () {
            $(window).scroll(function(){
                $.doTimeout( 'scroll', 100, ScrollExecute);
-           });
-         });         
+           });        
+         });  
+
+         $('.collection_description__text').readmore({
+            speed: 75,
+            lessLink: '<a href="#" style="color: #74adb4;">Read less</a>',
+            moreLink: '<a href="#" style="color: #74adb4;">Read More</a>',
+            collapsedHeight:50
+          });                
      </script>   
+
+     
+
   {%- endif -%}
 	
 
@@ -115,6 +147,8 @@
  
  {% include 'scroll-to-the-top' %}
  {% include 'spurit_dmr_theme_snippet' %}
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
 {% include 'livechat_chat_window' %}
