I added the collection description and the readmore option

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -116,8 +116,8 @@
 
          $('.collection_description__text').readmore({
             speed: 75,
-            lessLink: '<a href="#" style="color: #74adb4;">Read less</a>',
-            moreLink: '<a href="#" style="color: #74adb4;">Read More</a>',
+            lessLink: '<a href="#" class="readmore-button">Read less</a>',
+            moreLink: '<a href="#" class="readmore-button">Read More</a>',
             collapsedHeight:50
           });                
      </script>   
