--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -3,6 +3,8 @@
 
 {%- section 'collection_content' -%}
 
+{%- section 'collection_page_content' -%}
+
 <style>
 /* Your designer can adjust these to get all kind of looks: 
 one or separate lines, active links instead of checkboxes, colors etc. */
