--- a/web-flair/app/sass/blocks/catalog-home-page/_catalog-home-page.sass
+++ b/web-flair/app/sass/blocks/catalog-home-page/_catalog-home-page.sass
@@ -10,3 +10,14 @@
 	font-family: $light
 	b
 		color: $accent
+
+.collection_description__text
+	overflow: hidden
+	padding-left: 20px
+	padding-right: 20px
+
+.readmore-button
+	color: #74adb4
+	display: block
+	margin-bottom: 20px
+	padding-left: 20px
