--- a/web-flair/app/sass/blocks/banner-descr/_banner-descr.sass
+++ b/web-flair/app/sass/blocks/banner-descr/_banner-descr.sass
@@ -23,6 +23,9 @@
 		font-family: $bold
 		color: $accent
 
+.banner-descr__link
+	text-decoration: none
+
 .banner-descr__left-text-large
 	font-size: 24px
 	font-family: $semi-bold
