I fixed the footer menu on mobile

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -24,10 +24,11 @@
 							</div>
 						</div>
 
-						<div class="footer__column d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex">
-						    {%- include "footer_menu_option", menu_title: section.settings.text_for_footer_menu_linklist, menu_name:  section.settings.footer_menu_linklist  -%}
-							{%- include "footer_menu_option", menu_title: section.settings.text_for_footer_menu2_linklist, menu_name:  section.settings.footer_menu2_linklist  -%}
-						</div>
+						{%- include "footer_menu_option", menu_title: section.settings.text_for_footer_menu_linklist, menu_name:  section.settings.footer_menu_linklist  -%}
+						{%- include "footer_menu_option", menu_title: section.settings.text_for_footer_menu2_linklist, menu_name:  section.settings.footer_menu2_linklist  -%}
+
+						<!--<div class="footer__column d-flex d-sm-flex d-md-flex d-lg-flex d-xl-flex">
+						</div> -->
 
 						<div class="footer__column column stay_connected"> 
 							<div class="footer__column-title">STAY CONNECTED</div>
