--- a/snippets/footer_menu_option.liquid
+++ b/snippets/footer_menu_option.liquid
@@ -1,4 +1,4 @@
-<div class="footer_dynamic_menu" >
+<div class="footer__column footer_dynamic_menu" >
     <div class="footer__column-title">{{menu_title}}</div>
     <ul class="footer__list">
         {% for link in   linklists[menu_name].links %}
